--- a/XClip.Api/XClip.Api.csproj
+++ b/XClip.Api/XClip.Api.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BatchController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MediaSourceController.cs" />
     <Compile Include="Controllers\TagController.cs" />
