--- a/XClip.Tests/App.config
+++ b/XClip.Tests/App.config
@@ -1,23 +1,42 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="XClipConfig"
-             type="XClip.Config.XClipConfig, XClip" />
+    <section name="XClipConfig" type="XClip.Config.XClipConfig, XClip" />
   </configSections>
-  <XClipConfig name="XClip Service"
-                  description="processes XClip metadata into specified media clips"
-                  dirRoot="H:\XClip"
-                  dirIn="H:\Downloads"
-                  dirOut="H:\XClip - Out"
-                  FfMpegLocation="C:\ffmpeg-20131202-git-e3d7a39-win64-static\bin\ffmpeg.exe"
-                  allowedExtensions=".mp4,.wmv,.flv,.mpg,.mpeg,.avi">
+  <XClipConfig name="XClip Service" description="processes XClip metadata into specified media clips" dirRoot="H:\XClip" dirIn="H:\Downloads" dirOut="H:\XClip - Out" FfMpegLocation="C:\ffmpeg-20131202-git-e3d7a39-win64-static\bin\ffmpeg.exe" allowedExtensions=".mp4,.wmv,.flv,.mpg,.mpeg,.avi">
   </XClipConfig>
   <connectionStrings>
-    <add name="xclipDb"
-         connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=DBSVR01;User Id=sa;Password=sesame1?"
-         providerName="System.Data.SqlClient" />
+    <add name="xclipDb" connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=DBSVR01;User Id=sa;Password=sesame1?" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="dbConnString" value="server=DBSVR01;Initial Catalog=XClip;uid=sa;password=sesame1?;"/>
+    <add key="dbConnString" value="server=DBSVR01;Initial Catalog=XClip;uid=sa;password=sesame1?;" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
