bringing project back to life

--- a/XClip.Utils/App.config
+++ b/XClip.Utils/App.config
@@ -10,14 +10,14 @@
                   dirIn="H:\Downloads"
                   dirOut="H:\XClip - Out"
                   FfMpegLocation="C:\ffmpeg-20131202-git-e3d7a39-win64-static\bin\ffmpeg.exe"
-                  allowedExtensions=".mp4,.wmv,.flv,.mpg,.mpeg,.avi">
+                  allowedExtensions=".mp4,.wmv,.flv,.mpg,.mpeg,.avi,.mov">
   </XClipConfig>
   <connectionStrings>
     <add name="xclipDb"
-         connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=DBSVR01;User Id=sa;Password=sesame1?"
+         connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=(local);User Id=sa;Password=sesame1?"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="dbConnString" value="server=DBSVR01;Initial Catalog=XClip;uid=sa;password=sesame1?;"/>
+    <add key="dbConnString" value="server=(local);Initial Catalog=XClip;uid=sa;password=sesame1?;"/>
   </appSettings>
 </configuration>
