--- a/XClip.Api/Web.config
+++ b/XClip.Api/Web.config
@@ -10,10 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-XClip.Api-20160321060816.mdf;Initial Catalog=aspnet-XClip.Api-20160321060816;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="xclipDb" connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=DBSVR01;User Id=sa;Password=sesame1?" providerName="System.Data.SqlClient" />
+    <add name="xclipDb" connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=(local);User Id=sa;Password=sesame1?" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="dbConnString" value="server=DBSVR01;Initial Catalog=XClip;uid=sa;password=sesame1?;" />
+    <add key="dbConnString" value="server=(local);Initial Catalog=XClip;uid=sa;password=sesame1?;" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -21,14 +21,14 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.webServer>
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <runtime>
