--- a/XClip.Processor/XClip.Processor.csproj
+++ b/XClip.Processor/XClip.Processor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EB65B5F-E752-4306-9C5A-9C0AB98F87BD}</ProjectGuid>
+    <ProjectGuid>{D46CD13A-D88A-49AE-A235-FEBAE4012041}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XClip.Utils</RootNamespace>
-    <AssemblyName>XClip.Utils</AssemblyName>
+    <RootNamespace>XClip.Processor</RootNamespace>
+    <AssemblyName>XClip.Processor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,18 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MediaHandler">
-      <HintPath>..\Reference\MediaHandler\component\Release\MediaHandler.dll</HintPath>
-    </Reference>
-    <Reference Include="NAudio, Version=1.7.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NAudio.1.7.3\lib\net35\NAudio.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.2.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.2.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\Reference\MediaHandler\component\x64\Release\MediaHandler.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -52,14 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MediaHandlerPlayground.cs" />
-    <Compile Include="NAudioPlayground.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XClipUtils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <Compile Include="XProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XClip\XClip.csproj">
