--- a/XClip.Tests/App.config
+++ b/XClip.Tests/App.config
@@ -6,7 +6,7 @@
   <XClipConfig name="XClip Service" description="processes XClip metadata into specified media clips" dirRoot="H:\XClip" dirIn="H:\Downloads" dirOut="H:\XClip - Out" FfMpegLocation="C:\ffmpeg-20131202-git-e3d7a39-win64-static\bin\ffmpeg.exe" allowedExtensions=".mp4,.wmv,.flv,.mpg,.mpeg,.avi">
   </XClipConfig>
   <connectionStrings>
-    <add name="xclipDb" connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=DBSVR01;User Id=sa;Password=sesame1?" providerName="System.Data.SqlClient" />
+    <add name="xclipDb" connectionString="Persist Security Info=False;Initial Catalog=XClip;Data Source=(localhost);User Id=sa;Password=sesame1?" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="dbConnString" value="server=DBSVR01;Initial Catalog=XClip;uid=sa;password=sesame1?;" />
