--- a/XClip.Api/XClip.Api.csproj
+++ b/XClip.Api/XClip.Api.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\mediaSource.cs" />
     <Compile Include="Models\tag.cs" />
+    <Compile Include="Models\tagCreation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
